--- a/Site Institucional/public/index.html
+++ b/Site Institucional/public/index.html
@@ -83,10 +83,7 @@
         <div class="titulo">
           <h1>VaultWise</h1>
           <div class="texto1">
-            A VaultWise é líder em soluções de gerenciamento de ATMs, oferecendo serviços inovadores e confiáveis para
-            garantir o máximo desempenho e segurança de suas operações. Com uma abordagem centrada no cliente e
-            tecnologia de ponta, a VaultWise otimiza a gestão de caixas eletrônicos, assegurando disponibilidade
-            contínua e eficiência operacional.
+            A VaultWise lidera o mercado de gerenciamento de ATMs com soluções inovadoras que maximizam desempenho e segurança. Focada no cliente e com tecnologia de ponta, garante a eficiência operacional e a disponibilidade contínua de caixas eletrônicos.
           </div>
           <button class="button">
             <span class="button_lg">
@@ -108,11 +105,8 @@
         <div class="titulo_sobre_nos">
           <h1>Sobre nós</h1>
           <div class="texto_sobre_nos">
-            Nossa equipe é composta por seis sócios dedicados que combinam conhecimento profundo e tecnologia de ponta
-            para oferecer uma experiência incomparável. Focamos em você e nas suas necessidades, garantindo
-            disponibilidade contínua e eficiência operacional através de soluções personalizadas e centradas no cliente.
-            Com a VaultWise, você não apenas gerencia seus ATMs; você os potencializa. Descubra como nossa expertise
-            pode elevar a performance e a segurança das suas operações. VaultWise, 100% de comprometimento!
+           
+Nossa equipe de seis sócios combina expertise e tecnologia de ponta para entregar soluções personalizadas, focadas em suas necessidades. Com a VaultWise, você não apenas gerencia seus ATMs, mas os potencializa, garantindo eficiência e segurança máximas. VaultWise: 100% comprometida em elevar suas operações.
           </div>
         </div>
       </div>
@@ -124,11 +118,7 @@
         <div class="titulo_equipe">
           <h1>Conheça a equipe VaultWise</h1>
           <div class="texto_equipe">
-            Nossa equipe é composta por seis sócios dedicados que combinam conhecimento profundo e tecnologia de ponta
-            para oferecer uma experiência incomparável. Focamos em você e nas suas necessidades, garantindo
-            disponibilidade contínua e eficiência operacional através de soluções personalizadas e centradas no cliente.
-            Com a VaultWise, você não apenas gerencia seus ATMs; você os potencializa. Descubra como nossa expertise
-            pode elevar a performance e a segurança das suas operações.
+            Nossa equipe de seis sócios alia conhecimento profundo e tecnologia de ponta para oferecer uma experiência incomparável. Focada em suas necessidades, a VaultWise garante disponibilidade contínua e eficiência operacional com soluções personalizadas. Mais do que gerenciar ATMs, nós os potencializamos, elevando a performance e segurança de suas operações.
           </div>
         </div>
 
