css - alterações pagina home

--- a/Site Institucional/public/index.html
+++ b/Site Institucional/public/index.html
@@ -63,7 +63,9 @@
         <!--Class exclusiva pra a a logo-->
         <div class="logo">
           <img src="css/imagens/logosemfundo.png" alt="">
+          <p>VaultWise</p>
         </div>
+
         <!--Class que guarda as opções de botôes do header-->
         <nav>
           <ul>
@@ -72,6 +74,9 @@
             </li>
             <li>
               <a href="sobre_nos.html">Sobre Nós</a>
+            </li>
+            <li>
+              <a href="#">Contato</a>
             </li>
             <li>
               <a href="Login.html">Login</a>
